--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 <div id="wrapper" none="true">
     
 	<div id="header" _height="none">
-    <div id="google_translate_element"></div><script type="text/javascript">
+    <!--<div id="google_translate_element"></div><script type="text/javascript">
 function googleTranslateElementInit() {
   new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
 }
-</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>-->
         <div id='cssmenu'>
 			<ul>
    				<li class='has-sub'><a href='index.html'><span>Home</span></a></li>
