--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 <link href='http://fonts.googleapis.com/css?family=BenchNine' rel='stylesheet' type='text/css'>
 <link href="css/supersized.css" rel="stylesheet" type="text/css" />
+<meta name="google-translate-customization" content="685a891ac212c6ec-499eaa5b55a583bb-g537edc3cc3ebeabb-1f"></meta>
 </head>
 
 <body>
@@ -60,11 +61,7 @@
 <div id="wrapper" none="true">
     
 	<div id="header" _height="none">
-    <!--<div id="google_translate_element"></div><script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
-}
-</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>-->
+
         <div id='cssmenu'>
 			<ul>
    				<li class='has-sub'><a href='index.html'><span>Home</span></a></li>
@@ -77,6 +74,7 @@ function googleTranslateElementInit() {
       				</ul>
    				</li>
    				<li class='has-sub'><a href='about.html'><span>About</span></a></li>
+                <li class='has-sub'><a href='blog.html'><span>blog</span></a></li>
    				<li class='has-sub'><a href='mailto:armsdream@gmail.com'><span>Contact</span></a></li>
 					</ul>
 		</div>
