--- a/sketchbook.html
+++ b/sketchbook.html
@@ -37,6 +37,7 @@
       				</ul>
    				</li>
    				<li class='has-sub'><a href='about.html'><span>About</span></a></li>
+                <li class='has-sub'><a href='blog.html'><span>blog</span></a></li>
    				<li class='has-sub'><a href='mailto:armsdream@gmail.com'><span>Contact</span></a></li>
 					</ul>
 		</div>
