--- a/sketchbook.html
+++ b/sketchbook.html
@@ -25,14 +25,14 @@
 <div id="wrapper" none="true">
     
 	<div id="header" _height="none">
-        <div id='cssmenu'>
+       <div id='cssmenu'>
 			<ul>
    				<li class='has-sub'><a href='index.html'><span>Home</span></a></li>
    				<li class='has-sub'><a href='#'><span>Gallery</span></a>
       				<ul>
-         				<li><a href='Illustrations.html'><span>Illustrations</span></a></li>
-         				<li><a href='conceptart.html'><span>Concept Art</span></a></li>
-         				<li><a href='design.html'><span>Design</span></a></li>
+         				<li class="has-sub2"><a href='Illustrations.html'><span>Illustrations</span></a></li>
+         				<li class="has-sub2"><a href='conceptart.html'><span>Concept Art</span></a></li>
+         				<li class="has-sub2"><a href='design.html'><span>Design</span></a></li>
          				<li class='last'><a href='sketchbook.html'><span>Sketchbook</span></a></li>
       				</ul>
    				</li>
