app ui design update
app ui design update

--- a/design.html
+++ b/design.html
@@ -53,6 +53,10 @@
   		<div class="title">Design</div>
         <div class="line"></div>
         <div class="image-set">
+        	<h3>App UI Design</h3>
+            <div class="line2"></div>
+        	<div class="image_tn"><a href="img/gallery/Design/app_design_001.jpg" title="AED App UI Design" target="_blank" class="html5lightbox" data-group="set1"><img src="img/gallery/Design/appdesin_thumb_001.jpg"></a></div>
+            
         	<h3>Web Design</h3>
             <div class="line2"></div>
         	<div class="image_tn"><a href="http://www.trussti.com/" title="Trussti Office Website Design" target="_blank" data-group="set1"><img src="img/gallery/Design/webdesin_thumb_001.jpg"></a></div>
