--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 		
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/style.css" rel="stylesheet" type="text/css" />
-<link href='http://fonts.googleapis.com/css?family=BenchNine' rel='stylesheet' type='text/css'>
+<link href="http://fonts.googleapis.com/css?family=BenchNine" rel="stylesheet" type="text/css">
 <link href="css/supersized.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -25,25 +25,31 @@
 <div id="wrapper" none="true">
     
 	<div id="header" _height="none">
-        <div id='cssmenu'>
+
+        <div id="cssmenu">
 			<ul>
-   				<li class='has-sub'><a href='index.html'><span>Home</span></a></li>
-   				<li class='has-sub'><a href='#'><span>Gallery</span></a>
+   				<li class="has-sub"><a href="index.html"><span>Home</span></a></li>
+   				<li class="has-sub"><a href="design.html"><span>Gallery</span></a>
       				<ul>
-         				<li class="has-sub2"><a href='Illustrations.html'><span>Illustrations</span></a></li>
-         				<li class="has-sub2"><a href='conceptart.html'><span>Concept Art</span></a></li>
-         				<li class="has-sub2"><a href='design.html'><span>Design</span></a></li>
-         				<li class='last'><a href='sketchbook.html'><span>Sketchbook</span></a></li>
+         				<li class="has-sub2"><a href="Illustrations.html"><span>Illustrations</span></a></li>
+         				<li class="has-sub2"><a href="conceptart.html"><span>Concept Art</span></a></li>
+         				<li class="has-sub2"><a href="design.html"><span>Design</span></a></li>
+         				<li class="last"><a href="sketchbook.html"><span>Sketchbook</span></a></li>
       				</ul>
    				</li>
-   				<li class='has-sub'><a href='about.html'><span>About</span></a></li>
-                <li class='has-sub'><a href='blog.html'><span>blog</span></a></li>
-   				<li class='has-sub'><a href='mailto:armsdream@gmail.com'><span>Contact</span></a></li>
-					</ul>
+   				<li class="has-sub"><a href="about.html"><span>About</span></a></li>
+                <li class="has-sub"><a href="blog.html"><span>blog</span></a></li>
+   				<li class="has-sub"><a href="mailto:armsdream@gmail.com"><span>Contact</span></a></li>
+			</ul>
 		</div>
-    	<a href="index.html"><div class="header_logo"><img src="img/header_logo.png"/></div>
-        <h1>Paintbrush Dream</h1>
-        </a>
+        <div style="width:300px;">
+            <a href="index.html" style="width:300px;">
+                <div class="header_logo">
+                    <img src="img/header_logo.png" alt="">
+                </div>
+                <div class="header_title">Paintbrush Dream</div>
+            </a>
+        </div>
 
  
     </div>
@@ -62,16 +68,21 @@
                 <br />
                 <p>2010／10～2012／08<br />Playtime game 美商網路科技公司: 遊戲美術設計<br />Playtime game Co., Ltd.: Game Graphic Designer</p>
                 <br />
-                <p>2012／09 To date<br />新加坡商采狄科技: UI美術設計<br />Trussti : UI Designer</p>
+                <p>2012／09 ~2015/12<br />新加坡商采狄科技: UI美術設計<br />Trussti : UI Designer</p>
+                <br/>
+                <p>2015／12 To date<br />Q.S.F SOFTWARE: UX/UI設計<br />Q.S.F SOFTWARE : UI Designer</p>
         	</div>
-        <div class="arms_photo"><img src="img/gallery/arms_photo.jpg"/></div>
-        <p>Hi, 歡迎來到我的網站, 我叫Arms, 我是藝術設計工作者, 住在台北。<br />
-        如果你喜歡我的風格或者有適合的設計工作項目，請跟我連絡，謝謝你的來訪。
-		<br />
-		<br />
-		Hi, welcome to my website, My Name is Arms Huang and I'm a  artist living in the Taipei, Taiwan.<br /> 
-		If you like my style and want a custom artwork for your project, contact me, thank you.</p>
+            <div class="synopsis">
+        		<div class="arms_photo"><img src="img/gallery/arms_photo.jpg"/></div>
+        		<p style="padding-bottom: 100px;">Hi, 歡迎來到我的網站, 我叫Arms, 我是設計工作者, 住在台北。
+                <br />
+        			如果你喜歡我的風格或者有適合的設計工作項目，請跟我連絡，謝謝你的來訪。
+                <br />
+                <br />
+                Hi, welcome to my website, My Name is Arms Huang and I"m a  artist living in the Taipei, Taiwan.<br /> 
+                If you like my style and want a custom artwork for your project, contact me, thank you.</p>
     	</div>
+        </div>
   </div>
   
     <div id="footer" _height="none">©2014 Arms Paintbrush Dream. All Rights Reserved.</div>
