--- a/sketchbook.html
+++ b/sketchbook.html
@@ -16,7 +16,7 @@
 		
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/style.css" rel="stylesheet" type="text/css" />
-<link href='http://fonts.googleapis.com/css?family=BenchNine' rel='stylesheet' type='text/css'>
+<link href="http://fonts.googleapis.com/css?family=BenchNine" rel="stylesheet" type="text/css">
 <link href="css/supersized.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -25,25 +25,31 @@
 <div id="wrapper" none="true">
     
 	<div id="header" _height="none">
-       <div id='cssmenu'>
+
+        <div id="cssmenu">
 			<ul>
-   				<li class='has-sub'><a href='index.html'><span>Home</span></a></li>
-   				<li class='has-sub'><a href='#'><span>Gallery</span></a>
+   				<li class="has-sub"><a href="index.html"><span>Home</span></a></li>
+   				<li class="has-sub"><a href="#"><span>Gallery</span></a>
       				<ul>
-         				<li class="has-sub2"><a href='Illustrations.html'><span>Illustrations</span></a></li>
-         				<li class="has-sub2"><a href='conceptart.html'><span>Concept Art</span></a></li>
-         				<li class="has-sub2"><a href='design.html'><span>Design</span></a></li>
-         				<li class='last'><a href='sketchbook.html'><span>Sketchbook</span></a></li>
+         				<li class="has-sub2"><a href="Illustrations.html"><span>Illustrations</span></a></li>
+         				<li class="has-sub2"><a href="conceptart.html"><span>Concept Art</span></a></li>
+         				<li class="has-sub2"><a href="design.html"><span>Design</span></a></li>
+         				<li class="last"><a href="sketchbook.html"><span>Sketchbook</span></a></li>
       				</ul>
    				</li>
-   				<li class='has-sub'><a href='about.html'><span>About</span></a></li>
-                <li class='has-sub'><a href='blog.html'><span>blog</span></a></li>
-   				<li class='has-sub'><a href='mailto:armsdream@gmail.com'><span>Contact</span></a></li>
-					</ul>
+   				<li class="has-sub"><a href="about.html"><span>About</span></a></li>
+                <li class="has-sub"><a href="blog.html"><span>blog</span></a></li>
+   				<li class="has-sub"><a href="mailto:armsdream@gmail.com"><span>Contact</span></a></li>
+			</ul>
 		</div>
-    	<a href="index.html"><div class="header_logo"><img src="img/header_logo.png"/></div>
-        <h1>Paintbrush Dream</h1>
-        </a>
+        <div style="width:300px;">
+            <a href="index.html" style="width:300px;">
+                <div class="header_logo">
+                    <img src="img/header_logo.png" alt="">
+                </div>
+                <div class="header_title">Paintbrush Dream</div>
+            </a>
+        </div>
 
  
     </div>
@@ -60,7 +66,7 @@
                     	<div class="image_tn"><a href="img/gallery/Sketchbook/image-05.jpg"  class="html5lightbox" data-group="set1" title="Cloud"><img src="img/gallery/Sketchbook/thumb-05.jpg"></a></div>
                     	<div class="image_tn"><a href="img/gallery/Sketchbook/image-06.jpg"  class="html5lightbox" data-group="set1" title="Chick"><img src="img/gallery/Sketchbook/thumb-06.jpg"></a></div>
                     	<div class="image_tn"><a href="img/gallery/Sketchbook/image-07.jpg"  class="html5lightbox" data-group="set1" title="Old Man Simple smile"><img src="img/gallery/Sketchbook/thumb-07.jpg"></a></div>
-                    	<div class="image_tn"><a href="img/gallery/Sketchbook/image-08.jpg"  class="html5lightbox" data-group="set1" title="Merry X'Mas Happy"><img src="img/gallery/Sketchbook/thumb-08.jpg"></a></div>
+                    	<div class="image_tn"><a href="img/gallery/Sketchbook/image-08.jpg"  class="html5lightbox" data-group="set1" title="Merry X"Mas Happy"><img src="img/gallery/Sketchbook/thumb-08.jpg"></a></div>
 
     	</div>
   </div>
